--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "marked": "^2.1.3",
     "mongoose": "^5.12.14",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "slugify": "^1.5.3"
   }
 }
